# simple-event-aggreator

./: CMakeLists.txt  README.md  main.cpp  simple_event_aggregator.h
